@@ -8,8 +8,6 @@ TODO-list for amaroK
 
 SHORT-TERM (URGENT):
 
-    * fix: #86 <markey> with "amarok default color scheme" some elements of the searchbrowser are invisible
-
     * add: #85 <muesli> make searchbrowser search the collection, too -->muesli
 
     
