@@ -2,6 +2,7 @@ amaroK ChangeLog
 ================
 (c) 2002-2004 the amaroK authors.
 
+  FIX: BrowserWin's QLabels are painted white in amaroK's own color scheme
 
 VERSION 1.0-beta1:
   ADD: Search Browser - search stuff on your hdd / in your collection
